[package]
name = "YPScan"
version = "1.0.0-dev"
edition = "2024"

[features]
default = ["yara_c"]
yara_c = ["dep:yara"]
yara_x = ["dep:yara-x"]

[dependencies]
owo-colors = "4.1"
enable-ansi-support = "0.2"
indicatif = "0.18"
chrono = "0.4"
walkdir = "2.5"
sysinfo = "0.36"
regex = "1.11"
file-format = { version = "0.28", features = ["reader"]}
concurrent-queue = "2.5"
fernet = { version = "0.2", features = ["rustcrypto"], default-features = false}
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10"
clap = { version = "4.5", features = ["cargo"]}
clap-cargo = "0.16"
local-encoding = "0.2"
queue-file = "1.4"
syslog = "6.1.1"
rand = "0.9"
linkme = "0.3"
yara-x = { version = "1.5", optional = true } # yara_x dependencies

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
verifysign = "0.2" # codesign checker
yara = { version = "0.30", features = ["vendored","openssl-static"], optional = true } # yara_c dependencies for Windows

# Non-Windows dependencies
[target.'cfg(not(target_os = "windows"))'.dependencies]
yara = { version = "0.30", features = ["vendored"], optional = true } # yara_c dependencies for Non-Windows

# Build imports for windows
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[build-dependencies]
built = "0.8"

# Set different binary name for each feature
[[bin]]
name = "YPScan"
path = "src/mainc.rs"
required-features = ["yara_c"]

[[bin]]
name = "YPScanX"
path = "src/mainx.rs"
required-features = ["yara_x"]

# Set release profile settings to reduce binary size
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1